# heritage-assets-2026

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  TESTING.md  config.py  main.py  pyproject.toml
app/: __init__.py  api.py  database.py  models.py  schemas.py  scraper.py  tidying.py
app/static/: browse.html
data/: collections.csv
deploy/: README.md  heritage-api.service  heritage-scrape.service  heritage-scrape.timer
scripts/: import_historical.py  incremental_scrape.py  process_snapshot.py  scrape_land_buildings.py
